fix z-index msg_dialog tag

--- a/html/themes/default/css/modal.css
+++ b/html/themes/default/css/modal.css
@@ -1,5 +1,6 @@
 .modal {
     width: 35%;
+    z-index: 150;
 }
 
 .modal .modal-content.attention-elem i:first-child,
